portefaix-policies-0.7.0/kyverno/C0008-container-resources/resource.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-ko-1
spec:
  containers:
  - name: mycontainer
    image: gcr.io/google-samples/node-hello:1.0
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-ko-2
spec:
  containers:
  - name: mycontainer
    image: gcr.io/google-samples/node-hello:1.0
    resources:
      requests:
        memory: "256Mi"
        cpu: "0.5"
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-ko-3
spec:
  containers:
  - name: mycontainer
    image: gcr.io/google-samples/node-hello:1.0
    resources:
      limits:
        memory: "256Mi"
        cpu: "0.5"
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-ok
  labels:
    app: myapp
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      requests:
        memory: "256Mi"
        cpu: "0.5"
      limits:
        memory: "1024Mi"
        cpu: "1"
